# ProcessPi

./: 404.html  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  cli.py  heatexchanger_example.ipynb  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  sitemap.xml  test.py  test_units.py
.github/workflows/: docs.yml  python-publish.yml
about/changelog/: index.html
about/license/: index.html
about/roadmap/: index.html
api_reference/: index.html
contributing/: index.html
css/: custom.css
docs/: CNAME  api_reference.md  contributing.md  index.md  installation.md  license.md
docs/about/: changelog.md  contributing.md  knowledge_transfer.md  license.md  roadmap.md
docs/api/: __init__.md  calculations.md  cli.md  components.md  constants.md  equipment.md  index.md  integration.md  pipelines.md  streams.md  units.md
docs/audit/: documentation-audit-report.md  source-inventory.md
docs/css/: custom.css
docs/examples/: index.md
docs/overrides/: main.html
docs/reviews/: 2026-04-09-repository-technical-architecture-review.md
docs/usage/: units.md
docs/user-guide/: cli.md  features.md  introduction.md
examples/: phase_change_hx_examples.py
installation/: index.html
js/: custom.js
license/: index.html
overrides/: main.html
overrides/partials/: footer.html
processpi/: __init__.py  cli.py  constants.py
processpi/calculations/: __init__.py  (+3 more)
processpi_app/: main.py
roadmap/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
tests/: test_engine_network.py  test_heatexchanger_mechanical_dispatch.py  test_integration_flowsheet_ports.py  test_network.py  test_pipeline_network.py  test_shell_tube_kern_bell_workflow.py  test_variables.py
(+409 files in other folders)
