[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "processpi"
version = "0.1.2.12"
description = "Python toolkit for chemical engineering simulations, equipment design, and unit conversions"
readme = "README.md"
requires-python = ">=3.8"

authors = [
    { name = "Raviteja Varma Nadimpalli", email = "processpi.dev@gmail.com" }
]

license = { file = "LICENSE" }

dependencies = [
    "tabulate>=0.9.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1",
    "CoolProp>=6.5.0",
    "tqdm>=4.65.0",
    "plotly>=5.18.0"
]

[project.urls]
Homepage = "https://github.com/varma666/ProcessPi"
BugTracker = "https://github.com/varma666/ProcessPi/issues"
SourceCode = "https://github.com/varma666/ProcessPi"

